--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
            <a-assets>
-    <img id="my-image" src="picture.jpeg">
+    <img id="my-image" src="freddy.jpeg">
   </a-assets>
 
       <a-marker preset="hiro">
-                <a-text value="Visitekaartje" color="red" rotation="-90 0 0"  scale="2 2 2"></a-text>
-                          <a-text value="Visitekaartje" color="red" rotation="-90 10 0"  scale="2 2 2"></a-text>
+                <a-image src="#my-image" rotation="-90 0 0"  scale="2 2 2"></a-image>
 
             </a-marker>
             <a-marker type='barcode' value='2'>
