--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
            <a-assets>
-    <img id="my-image" src="troll.gif">
+    <video id="my-image" src="troll.gif">
   </a-assets>
 
       <a-marker preset="hiro">
-                <a-image src="#my-image" rotation="-90 0 0"  scale="3 3 3"></a-image>
+          <a-video controls autoplay>
+                <a-video src="#my-image" rotation="-90 0 0"  scale="3 3 3"></a-image>
 
             </a-marker>
             <a-marker type='barcode' value='2'>
