--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
            <a-assets>
-    <video id="my-image" src="troll.gif">
+    <video id="my-video" autoplay loop="true" src="troll.gif">
   </a-assets>
 
       <a-marker preset="hiro">
-          <a-video controls autoplay>
-                <a-video src="#my-image" rotation="-90 -90 -90"  scale="3 3 3"></a-image>
+                <a-video src="#my-video" rotation="-90 -90 90" scale="1 1 1"></a-video>
 
             </a-marker>
             <a-marker type='barcode' value='2'>
