--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </a-assets>
 
       <a-marker preset="hiro">
-                <a-video src="meme.mp4" rotation="-90 -90 90" scale="1 1 1"></a-video>
+                <a-video src="memer.mp4" rotation="-90 -90 90" scale="1 1 1"></a-video>
 
             </a-marker>
             <a-marker type='barcode' value='2'>
