--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
            <a-assets>
-    <video id="my-video" autoplay loop="true" src="memer.mov">
+    <video id="my-video" loop="true" src="memer.mov">
   </a-assets>
 
       <a-marker preset="hiro">
