--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
            <a-assets>
-    <video id="my-video" autoplay="true" src="memer.mov">
+    <video id="my-video" autoplay="true" src="Shrek.mp4">
   </a-assets>
 
       <a-marker preset="hiro">
-                <a-video src="memer.mov" rotation="-90 -90 90" scale="4 4 4"></a-video>
+                <a-video src="Shrek.mp4" rotation="-90 -90 90" scale="4 4 4"></a-video>
 
             </a-marker>
             <a-marker type='barcode' value='2'>
